<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/b_time_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rosybrown"
        android:onClick="onClick"
        android:text="@string/set_date_dialog" />

    <Button
        android:id="@+id/b_single_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/rosybrown"
        android:onClick="onClick"
        android:text="@string/single_choice_dialog" />

    <Button
        android:id="@+id/b_multi_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/rosybrown"
        android:onClick="onClick"
        android:text="@string/multi_choice_dialog" />

    <TextView
        android:id="@+id/tv_show_hobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>